@@ -1,0 +1,25 @@
+/*
+  Copyright (C) 2001-2014 Olof Hagsand
+
+  This file is part of CLIgen.
+
+  CLIgen is free software; you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation; either version 2 of the License, or
+  (at your option) any later version.
+
+  CLIgen is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with CLIgen; see the file COPYING.
+
+  Custom file as boilerplate appended by clicon_config.h 
+*/
+#if 1 /* SANITY CHECK */
+typedef struct {int a;} *cligen_handle;
+#else
+typedef void *cligen_handle; /* API */
+#endif
