@@ -26,6 +26,9 @@ A new decimal64 type is added. Decimal64 defined in the YANG standard
 number of decimals. For example, a decimal64 with 4 fraction-index is
 written as: 123.4567.
 
+Autoheader support. clicon_config.h.in may be generated by autoheader,
+but is still part of the release.
+
 The string type is extended with a length keyword. This adds the
 possibility to limit the length of a string. Example: <s:string
 length[2:10]>.
@@ -202,4 +205,5 @@ Stable version.
 
 R1_0
 ====
-GPL version available at http://www.nada.kth.se/~olofh (~2004)
+GPL version available at http://www.nada.kth.se/~olofh (~2004).
+
